# machine-learning-predicted-pizza

./: README.md  app.py  pyproject.toml  testes.ipynb
