[project]
name = "project-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Brunetto",email = "gabriel.brunetto@compasso.com.br"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[tool.poetry]
packages = [{include = "project_ml", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
